# PromptProxy

./: .env.example  .gitignore  README.md  ToDo_Done.md  bfl.md  byte_plus_api_sample.json  config.yaml  ecosystem.config.yml  fal_models.json  pyproject.toml  scratch.txt  seedream-allowed-sizes.json  z_curl.sh
DOCO/: 00_MASTER_INDEX.md  01_FAL.md  02_REPLICATE.md  03_BFL.md  04_ALIBABA.md  05_BYTEPLUS.md  06_DRAW_THINGS.md  07_OPENROUTER.md  08_GEMINI_NANOBANANA.md  batch.md
PRDs/: prd01.md
__PLAY/: fal-models.sh
__PLAY/FLUX2/: flux2-klien9b.py
_gRPC_DOCS/: deep_learnings.md  gRPC_API_Arguments.md  model_sampler_combinations.md  sampler_api_compatibility_notes.md  sampler_enum_reference.md
gateway/: __init__.py  config.py  image_store.py  job_service.py  main.py  models.py  registry.py  sidecar.py  store.py
gateway/drawthings/: __init__.py  config.py  service.py
gateway/plugins/: __init__.py  base.py  bfl.py  byteplus.py  drawthings.py  fal.py
gateway/sinks/: __init__.py  jsonl.py
scripts/: test_bfl_t2i_curl.sh  test_byteplus_i2i_curl.sh  test_byteplus_t2i_curl.sh  test_fal_i2i_curl.sh  test_fal_t2i_curl.sh
tests/: conftest.py  test_api.py  test_bfl_adapter.py  test_byteplus_adapter.py  test_config.py  test_drawthings_adapter.py  test_fal_adapter.py  test_image_store.py  test_job_service.py  test_jsonl_sink.py  test_models.py
