[project]
name = "promptproxy"
version = "0.1.0"
description = "Local inference gateway with a canonical API and pluggable backends"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flatbuffers>=25.2.10",
  "fastapi>=0.115.0",
  "fpzip>=1.2.0",
  "grpcio>=1.80.0",
  "httpx>=0.27.0",
  "numpy>=2.2.0",
  "pillow>=10.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "protobuf>=6.31.1",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.1",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "respx>=0.21.1",
]

[project.scripts]
promptproxy = "gateway.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=gateway --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = [
  "tests/*",
  "gateway/drawthings/config.py",
  "gateway/drawthings/cred.py",
  "gateway/drawthings/image_helpers.py",
  "gateway/drawthings/service.py",
  "gateway/drawthings/generated/*",
  "gateway/plugins/drawthings.py",
]
